tests/invalid/declare_statement.c
int main() {
    if (5)
        int i = 0;
}
// ERROR: Line 2, Error 3009
